extra/virtualservices/grafana-istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-istio-vs
  namespace: istio-system
spec:
  gateways:
  - istio-gw
  hosts:
  - "grafana.istio.santier.tfm"
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
