extra/virtualservices/kiali.istio.santier.tfm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-istio-vs
  namespace: istio-system
spec:
  gateways:
  - istio-gw
  hosts:
  - "kiali.istio.santier.tfm"
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
