extra/virtualservices/prometheus.istio.santier.tfm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-istio-vs
  namespace: istio-system
spec:
  gateways:
  - istio-gw
  hosts:
  - "prometheus.istio.santier.tfm"
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
