extra/virtualservices/tracing.istio.santier.tfm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-istio-vs
  namespace: istio-system
spec:
  gateways:
  - istio-gw
  hosts:
  - "tracing.istio.santier.tfm"
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
